--- a/springboot-dubbo-server/src/main/resources/application.properties
+++ b/springboot-dubbo-server/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.dubbo.application.name=provider
 spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
+
+## 扫描注解包路径，多个包用逗号分隔，不填pacakge表示扫描当前ApplicationContext中所有的类
 spring.dubbo.scan=org.spring.springboot.dubbo
