--- a/springboot-dubbo-server/src/main/resources/application.properties
+++ b/springboot-dubbo-server/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.dubbo.protocol.port=20880
 
 ## 扫描注解包路径，多个包用逗号分隔，不填pacakge表示扫描当前ApplicationContext中所有的类
 spring.dubbo.scan=org.spring.springboot.dubbo
+
+server.port=8989
