--- a/springboot-fileupload/pom.xml
+++ b/springboot-fileupload/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot-fileupload</name>
-	<description>Demo project for Spring Boot</description>
+	<name>springboot-fileupload-文件上传包括多文件上传</name>
+	<description>多文件上传</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
