--- a/springboot-filter-listener/pom.xml
+++ b/springboot-filter-listener/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot-filter-listener</name>
-	<description>Demo project for Spring Boot</description>
+	<name>springboot-filter-listener :: springboot 整合 servlet3.0 中的监听器</name>
+	<description>springboot 整合 servlet3.0 中的监听器</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
