修改了数据的配置

--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -49,6 +49,14 @@
             <version>${mysql-connector}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
