--- a/springboot-freemarker/src/main/resources/application.properties
+++ b/springboot-freemarker/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 9999
 ## 数据源配置
 spring.datasource.url=jdbc:mysql://139.224.14.39:3306/springbootdb?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
