--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/marvel?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://47.94.172.234:3306/fire_ads?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
