--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=1113
 ## 数据源配置
 spring.datasource.url=jdbc:mysql://47.94.172.234:3306/fire_ads?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
