--- a/springboot-mybatis-transaction/src/main/resources/application.yml
+++ b/springboot-mybatis-transaction/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
     datasource:
         name: marvel
@@ -5,3 +6,6 @@ spring:
         url: jdbc:mysql://127.0.0.1:3306/marvel
         username: root
         password: root
+
+server:
+  port: 8899
