--- a/springboot-shiro2/pom.xml
+++ b/springboot-shiro2/pom.xml
@@ -45,10 +45,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- shiro spring. -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-core</artifactId>
-			<version>RELEASE</version>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
 
