--- a/springboot-shiro-session/pom.xml
+++ b/springboot-shiro-session/pom.xml
@@ -87,6 +87,12 @@
             <version>1.4.3.RELEASE</version>
         </dependency>
 
+        <!-- shiro+redis缓存插件 -->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>2.4.2.1-RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
