--- a/springboot-httpclient/pom.xml
+++ b/springboot-httpclient/pom.xml
@@ -63,6 +63,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- thmleaf模板依赖. -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
