--- a/springboot-shiro2/pom.xml
+++ b/springboot-shiro2/pom.xml
@@ -47,10 +47,20 @@
         <!-- shiro spring. -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
-            <version>${shiro-version}</version>
+            <version>1.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.34</version>
+        </dependency>
 
         <!-- 使用Mybatis-->
         <dependency>
