--- a/springboot-mybatis-pagehelper/pom.xml
+++ b/springboot-mybatis-pagehelper/pom.xml
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<mybatis.pagehelper>4.1.4</mybatis.pagehelper>
+		<mybatis.springboot.starter>1.3.1</mybatis.springboot.starter>
 	</properties>
 
 	<dependencies>
@@ -32,7 +34,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.1</version>
+			<version>${mybatis.springboot.starter}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +45,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>${mybatis.pagehelper}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
