分页工具配置

--- a/springboot-mybatis-pagehelper/pom.xml
+++ b/springboot-mybatis-pagehelper/pom.xml
@@ -46,6 +46,8 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- MyBatis 分页插件 -->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
