--- a/springboot-http-pool/pom.xml
+++ b/springboot-http-pool/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<httpclient.pool.version>4.5.2</httpclient.pool.version>
 	</properties>
 
 	<dependencies>
@@ -40,6 +41,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.pool.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
